「目標」が背景色と同化していたので見出し3に変更しました。

--- a/src/members/inugamine/swiftPlayground/code1/algorithm.mdx
+++ b/src/members/inugamine/swiftPlayground/code1/algorithm.mdx
@@ -5,9 +5,9 @@ title: アルゴリズム
 # アルゴリズム
 
 ## 右手法
-```
-目標: 右手法のアルゴリズムを使って、壁を周って進みましょう。
-```
+
+### 目標: 右手法のアルゴリズムを使って、壁を周って進みましょう。
+
 回答コード例↓
 ``` swift
 func navigateAroundWall() {
@@ -81,9 +81,9 @@ toggleSwitch()
 ---
 
 ## アルゴリズムを直す
-```
-目標: アルゴリズムを直して、増えたブロックを上手に回りましょう。
-```
+
+### 目標: アルゴリズムを直して、増えたブロックを上手に回りましょう。
+
 回答コード例↓
 ``` swift
 func navigateAroundWall() {
@@ -190,9 +190,9 @@ toggleSwitch()
 ---
 
 ## 迷路を解く
-```
-目標: 右手法を使って、迷路を進んでみましょう。
-```
+
+### 目標: 右手法を使って、迷路を進んでみましょう。
+
 回答コード例↓
 ``` swift
 func navigateAroundWall() {
@@ -265,9 +265,9 @@ collectGem()
 
 ---
 ## どっちの手を使う？
-```
-目標: 独自のアルゴリズムを書いて迷路をクリアしましょう。
-```
+
+### 目標: 独自のアルゴリズムを書いて迷路をクリアしましょう。
+
 回答コード例↓
 ``` swift
 func navigateAroundWall() {
@@ -320,9 +320,9 @@ func navigateAroundWall() {
 
 ---
 ## 右に行くか、左に行くか
-```
-目標: 宝石を集めてスイッチを入れるための、上手なアルゴリズムを考えましょう
-```
+
+### 目標: 宝石を集めてスイッチを入れるための、上手なアルゴリズムを考えましょう
+
 回答コード例↓
 ``` swift
 func 行き止まりになるまで進む() {
