--- a/src/members/inugamine/swiftPlayground/code1/command.mdx
+++ b/src/members/inugamine/swiftPlayground/code1/command.mdx
@@ -5,9 +5,9 @@ title: コマンド
 # コマンド
 
 ## コマンドを使う
-```
-目標: Swift コマンドを使って Byte を動かして、宝石を集めましょう。
-```
+
+### 目標: Swift コマンドを使って Byte を動かして、宝石を集めましょう。
+
 回答コード例↓
 ``` swift
 func move(distance: Int){
@@ -52,9 +52,9 @@ collectGem()
 ---
 
 ## 新しいコマンドを追加する
-```
-目標: 動かすコマンドと向きを変えるコマンドを組み合わせて、宝石を集めましょう。
-```
+
+### 目標: 動かすコマンドと向きを変えるコマンドを組み合わせて、宝石を集めましょう。
+
 回答コード例↓
 ``` swift
 func move(distance: Int) {
@@ -96,9 +96,9 @@ move(distance: 2)
 ---
 
 ##  スイッチを切り替える
-```
-目標: 宝石を集めたら、スイッチを切り替えましょう。
-```
+
+### 目標: 宝石を集めたら、スイッチを切り替えましょう。
+
 回答コード例↓
 ``` swift
 func move(distance: Int) {
@@ -128,9 +128,9 @@ toggleSwitch()
 ---
 
 ##  ワープの練習
-```
-目標: 抜け穴を使って、宝石を集めましょう。
-```
+
+### 目標: 抜け穴を使って、宝石を集めましょう。
+
 回答コード例↓
 ``` swift
 func move(distance: Int) {
@@ -159,8 +159,8 @@ collectGem()
 ---
 
 ##  バグを見つけて直す
-```
-目標: バグを見つけて、直しましょう。
+
+### 目標: バグを見つけて、直しましょう。
 ```
 修正前のコード↓
 ```swift
@@ -172,7 +172,7 @@ moveForward()
 collectGem()
 moveForward()
 toggleSwitch()
-```
+
 回答コード例↓
 ``` swift
 // 修正後
@@ -193,8 +193,8 @@ toggleSwitch()
 ---
 
 ##  バグつぶしの練習
-```
-目標: コマンドを並べ替えて、コードをデバッグしましょう。
+
+### 目標: コマンドを並べ替えて、コードをデバッグしましょう。
 ```
 修正前のコード↓
 ```swift
@@ -235,9 +235,9 @@ collectGem() // moveForward() と入れ替え
 ---
 
 ##  最短の道順
-```
-目標: さまざまな方法を考えて、最短の道順を選びましょう。
-```
+
+### 目標: さまざまな方法を考えて、最短の道順を選びましょう。
+
 回答コード例↓
 ``` swift
 func move(steps: Int) {
