--- a/src/members/inugamine/swiftPlayground/code1/conditionalBranch.mdx
+++ b/src/members/inugamine/swiftPlayground/code1/conditionalBranch.mdx
@@ -5,9 +5,9 @@ title: 条件分岐コード
 # 条件分岐コード
 
 ## スイッチを調べる
-```
-目標: if 文を使って、切れているスイッチだけを切り替えましょう。
-```
+
+### 目標: if 文を使って、切れているスイッチだけを切り替えましょう。
+
 回答コード例↓
 ``` swift
 for i in 1...2 {
@@ -59,9 +59,9 @@ for i in 1 ... 3 {
 ---
 
 ## else if を使う
-```
-目標: if と else if を使って、スイッチを切り替えるか宝石を取るかを選びましょう。
-```
+
+### 目標: if と else if を使って、スイッチを切り替えるか宝石を取るかを選びましょう。
+
 回答コード例↓
 ``` swift
 moveForward()
@@ -116,9 +116,9 @@ for i in 1 ... 2 {
 ---
 
 ## 条件分岐コードをループする
-```
-目標: ループの中で if 文を使って、スイッチを切り替えたり宝石を集めたりします。
-```
+
+### 目標: ループの中で if 文を使って、スイッチを切り替えたり宝石を集めたりします。
+
 回答コード例↓
 ``` swift
 for i in 1 ... 12 {
@@ -141,9 +141,9 @@ for i in 1 ... 12 {
 ---
 
 ## 階段を上る条件を探す
-```
-目標: if 文を使って、宝石があったときに実行するコマンドを考えましょう。
-```
+
+### 目標: if 文を使って、宝石があったときに実行するコマンドを考えましょう。
+
 回答コード例↓
 ``` swift
 for i in 1 ... 13 {
@@ -167,9 +167,9 @@ for i in 1 ... 13 {
 ---
 
 ## 関数をじょうずに使う
-```
-目標: 関数、ループ、条件を使って、宝石を集めたりスイッチをオンにしたりしましょう。
-```
+
+### 目標: 関数、ループ、条件を使って、宝石を集めたりスイッチをオンにしたりしましょう。
+
 回答コード例↓
 ``` swift
 func collectOrToggle() {
@@ -258,9 +258,9 @@ collectYtoggle(times: 5)
 ---
 
 ## 囲まれる
-```
-目標: 条件、関数、ループを上手に使いましょう。
-```
+
+### 目標: 条件、関数、ループを上手に使いましょう。
+
 回答コード例↓
 ``` swift
 func wallCheck() {
@@ -333,9 +333,9 @@ for i in 1...9{
 ---
 
 ## 繰り返しを探す
-```
-目標: ステージの状態を確かめて、進む方向を考えましょう。
-```
+
+### 目標: ステージの状態を確かめて、進む方向を考えましょう。
+
 回答コード例↓
 ``` swift
 func goStraight(steps: Int) {
