--- a/src/members/inugamine/swiftPlayground/code1/for.mdx
+++ b/src/members/inugamine/swiftPlayground/code1/for.mdx
@@ -5,9 +5,9 @@ title: for ループ
 # for ループ
 
 ## ループを使う
-```
-目標: for 文を使って、一連のコマンドを繰り返しましょう。
-```
+
+### 目標: for 文を使って、一連のコマンドを繰り返しましょう。
+
 回答コード例↓
 ``` swift
 for i in 1 ... 5 {
@@ -46,9 +46,9 @@ for i in 1 ... 5 {
 ---
 
 ## 4辺でループする
-```
-目標: for ループを使って、一連のコマンドを繰り返しましょう。
-```
+
+### 目標: for ループを使って、一連のコマンドを繰り返しましょう。
+
 回答コード例↓
 ``` swift
 for i in 1...4 {
@@ -68,9 +68,9 @@ for i in 1...4 {
 ---
 
 ## 端まで行って戻る
-```
-目標: for 文を使って、行き来するパターンを繰り返しましょう。
-```
+
+### 目標: for 文を使って、行き来するパターンを繰り返しましょう。
+
 回答コード例↓
 ``` swift
 func moreSteps(){
@@ -102,9 +102,9 @@ for i in 1...4{
 ---
 
 ## ワープでループして
-```
-目標: ワープを通る繰り返しのパターンを見つけましょう。
-```
+
+### 目標: ワープを通る繰り返しのパターンを見つけましょう。
+
 回答コード例↓
 ``` swift
 func twoSteps(steps: Int) {
@@ -131,9 +131,9 @@ for i in 1...5{
 ---
 
 ## 3 つの分かれ道
-```
-目標: 繰り返しのパターンを分解して、関数と for 文を作りましょう。
-```
+
+### 目標: 繰り返しのパターンを分解して、関数と for 文を作りましょう。
+
 回答コード例↓
 ``` swift
 func moreSteps(steps: Int) {
@@ -174,9 +174,9 @@ for i in 1 ... 3{
 ---
 
 ## 右にも左にも
-```
-目標: 複数の繰り返しのパターンを分解して、関数とループを作りましょう。
-```
+
+### 目標: 複数の繰り返しのパターンを分解して、関数とループを作りましょう。
+
 回答コード例↓
 ``` swift
 func toggleYmove() {
@@ -288,9 +288,9 @@ for i in 1...3{
 ---
 
 ## 4 つの場所に 4 つの宝石
-```
-目標: パターンを見つけて分解し、関数を for 文を作る練習をしましょう。
-```
+
+### 目標: パターンを見つけて分解し、関数を for 文を作る練習をしましょう。
+
 回答コード例↓
 ``` swift
 func turnAround() {
