--- a/src/members/inugamine/swiftPlayground/code1/logicalOperators.mdx
+++ b/src/members/inugamine/swiftPlayground/code1/logicalOperators.mdx
@@ -5,9 +5,9 @@ title: 論理演算子
 # 論理演算子
 
 ##  NOT 演算子を使う
-```
-目標: NOT 演算子を使って、マスに宝石がない場合は、進む方向を変えましょう。
-```
+
+### 目標: NOT 演算子を使って、マスに宝石がない場合は、進む方向を変えましょう。
+
 回答コード例↓
 ``` swift
 func turnAround() {
@@ -74,9 +74,9 @@ if !isOnGem {
 ---
 
 ##  NOT で周る
-```
-目標: NOT 演算子を使って、行き止まりになったら左に曲がりましょう。
-```
+
+### 目標: NOT 演算子を使って、行き止まりになったら左に曲がりましょう。
+
 回答コード例↓
 ``` swift
 for i in 1 ... 14 {
@@ -116,9 +116,9 @@ if isOnClosedSwitch {
 ---
 
 ##  両方正しければ合格
-```
-目標: AND 演算子を使って、2 つの条件が両方とも当てはまったら道順を変えてみましょう。
-```
+
+### 目標: AND 演算子を使って、2 つの条件が両方とも当てはまったら道順を変えてみましょう。
+
 回答コード例↓
 ``` swift
 func turnAround() {
@@ -178,9 +178,9 @@ for i in 1 ... 7 {
 ---
 
 ##  一方でも正しければ合格
-```
-目標: OR 演算子を使って、2 つの条件のどちらかが当てはまる場合は、進む方向を変えましょう。
-```
+
+### 目標: OR 演算子を使って、2 つの条件のどちらかが当てはまる場合は、進む方向を変えましょう。
+
 回答コード例↓
 ``` swift
 for i in 1 ... 13 {
@@ -205,9 +205,9 @@ for i in 1 ... 13 {
 ---
 
 ##  論理の迷宮
-```
-目標: 論理演算子と条件分岐コードを使って、ステージをクリアしましょう。
-```
+
+### 目標: 論理演算子と条件分岐コードを使って、ステージをクリアしましょう。
+
 回答コード例↓
 ``` swift
 func turnAround() {
