--- a/src/members/inugamine/swiftPlayground/code1/while.mdx
+++ b/src/members/inugamine/swiftPlayground/code1/while.mdx
@@ -5,9 +5,9 @@ title: while ループ
 # while ループ
 
 ## 条件を決めてコードをループする
-```
-目標: ループを使って、入っているスイッチに辿り着くまで進み続けましょう。
-```
+
+### 目標: ループを使って、入っているスイッチに辿り着くまで進み続けましょう。
+
 回答コード例↓
 ``` swift
 while isOnClosedSwitch {
@@ -26,9 +26,9 @@ while isOnClosedSwitch {
 ---
 
 ## while ループをじょうずに使う
-```
-目標: while ループと if 文を使って、すべてのスイッチを入れましょう。
-```
+
+### 目標: while ループと if 文を使って、すべてのスイッチを入れましょう。
+
 回答コード例↓
 ``` swift
 while !isBlocked {
@@ -60,9 +60,9 @@ if isOnClosedSwitch {
 ---
 
 ## 正しいループを使う
-```
-目標: すべての宝石を集めるために、もっとも良いループを選びましょう。
-```
+
+### 目標: すべての宝石を集めるために、もっとも良いループを選びましょう。
+
 回答コード例↓
 ``` swift
 func turnAndCollectGem() {
@@ -109,9 +109,9 @@ while !isBlocked {
 ---
 
 ## 2 つのループ
-```
-目標: もっと良いループの使い方を見つけて、スイッチを切り替えましょう。
-```
+
+### 目標: もっと良いループの使い方を見つけて、スイッチを切り替えましょう。
+
 回答コード例↓
 ``` swift
 while !isBlocked {
@@ -155,9 +155,9 @@ if isOnClosedSwitch {
 ---
 
 ## 回る
-```
-目標: できるだけ効率良くステージをクリアする方法を考えましょう。
-```
+
+### 目標: できるだけ効率良くステージをクリアする方法を考えましょう。
+
 回答コード例↓
 ``` swift
 func collectYforward() {
@@ -213,9 +213,9 @@ for i in 1 ... 4 {
 ---
 
 ## 方法はたくさん
-```
-目標: さまざまな解きかたを試して、上手なクリア方法を見つけましょう。
-```
+
+### 目標: さまざまな解きかたを試して、上手なクリア方法を見つけましょう。
+
 回答コード例↓
 ``` swift
 func checkYtoggle() {
@@ -319,9 +319,9 @@ checkYtoggle()
 ---
 
 ## ループをネストする
-```
-目標: ループの中に入れた別のループを使って、螺旋に沿って移動しましょう。
-```
+
+### 目標: ループの中に入れた別のループを使って、螺旋に沿って移動しましょう。
+
 回答コード例↓
 ``` swift
 while !isBlocked {
@@ -343,9 +343,9 @@ while !isBlocked {
 ---
 
 ## ランダムな四角形
-```
-目標: ネストしたループと条件を使って、変化するステージの中を歩き回りましょう。
-```
+
+### 目標: ネストしたループと条件を使って、変化するステージの中を歩き回りましょう。
+
 回答コード例↓
 ``` swift
 while !isBlocked {
@@ -384,9 +384,9 @@ while !isBlocked {
 ---
 
 ## どんな方法でも
-```
-目標: 好きな組み立て方やパターンを使って、ステージをクリアしましょう。
-```
+
+### 目標: 好きな組み立て方やパターンを使って、ステージをクリアしましょう。
+
 回答コード例↓
 ``` swift
 while !isBlocked {
