--- a/src/members/inugamine/swiftPlayground/code2/type.mdx
+++ b/src/members/inugamine/swiftPlayground/code2/type.mdx
@@ -6,9 +6,9 @@ title: 型
 
 
 ## ワープをオフにする
-```
-目標: ワープをオフにして、スイッチのある場所まで行きましょう。
-```
+
+### 目標: ワープをオフにして、スイッチのある場所まで行きましょう。
+
 回答コード例↓
 ``` swift
 func steps() {
@@ -78,9 +78,9 @@ for i in 1...3 {
 ---
 
 ## ワープのオンとオフ
-```
-目標: ワープを有効にしたり無効にしたりして、宝石を集め、スイッチを切り替えましょう。
-```
+
+### 目標: ワープを有効にしたり無効にしたりして、宝石を集め、スイッチを切り替えましょう。
+
 回答コード例↓
 ``` swift
 var gemCounter = 0
@@ -205,9 +205,9 @@ if isOnClosedSwitch {
 ---
 
 ## ワープを正しく操作する
-```
-目標: 2組のワープのオンとオフを切り替えて、宝石を集めましょう。
-```
+
+### 目標: 2組のワープのオンとオフを切り替えて、宝石を集めましょう。
+
 回答コード例↓
 ``` swift
 var gemCounter = 0
@@ -317,9 +317,9 @@ collectGem()
 ---
 
 ## 隅々まで歩き回る
-```
-目標: 2組のワープのオンとオフを切り替えて、ステージをクリアしましょう。
-```
+
+### 目標: 2組のワープのオンとオフを切り替えて、ステージをクリアしましょう。
+
 回答コード例↓
 ``` swift
 var gemCounter = 0
@@ -500,9 +500,9 @@ while switchCounter < 6 {
 ---
 
 ## 宝石があちこちランダムに
-```
-目標: ランダムに決められた数の宝石を集めましょう。宝石の数は `totalGems` で表されます。
-```
+
+### 目標: ランダムに決められた数の宝石を集めましょう。宝石の数は `totalGems` で表されます。
+
 回答コード例↓
 ``` swift
 let totalGems = randomNumberOfGems
