--- a/src/members/inugamine/swiftPlayground/code2/variable.mdx
+++ b/src/members/inugamine/swiftPlayground/code2/variable.mdx
@@ -6,9 +6,9 @@ title: 変数
 
 
 ## 記録する
-```
-目標: 集めた宝石の数を記録する変数を作りましょう。
-```
+
+### 目標: 集めた宝石の数を記録する変数を作りましょう。
+
 回答コード例↓
 ``` swift
 var gemCountes = 0
@@ -46,9 +46,9 @@ func collectYaddCount() {
 ---
 
 ## 値を増やす(1)
-```
-目標: 宝石を取るたびに gemCounter(宝石カウンター) の値を増やしていきましょう。
-```
+
+### 目標: 宝石を取るたびに gemCounter(宝石カウンター) の値を増やしていきましょう。
+
 回答コード例↓
 ``` swift
 var gemCounter = 0
@@ -80,9 +80,9 @@ while gemCounter < 5 || !isBlocked || !isBlockedRight || !isBlockedLeft {
 ---
 
 ## 値を増やす(2)
-```
-目標: 変数の値を 1 つずつ増やして、集めた宝石の数を記録しましょう。
-```
+
+### 目標: 変数の値を 1 つずつ増やして、集めた宝石の数を記録しましょう。
+
 回答コード例↓
 ``` swift
 var gemCounter = 0
@@ -190,9 +190,9 @@ showGemResult() // 最後に宝石の表示機能を実行します。
 ---
 
 ## 7 つの宝石を集める
-```
-目標: ちょうど 7 個の宝石を集めましょう。
-```
+
+### 目標: ちょうど 7 個の宝石を集めましょう。
+
 回答コード例↓
 ``` swift
 var gemCounter = 0
@@ -259,9 +259,9 @@ while gemCounter < 7 {
 ---
 
 ## 3 つの宝石と 4 つのスイッチ
-```
-目標: 宝石を 3 つだけ取って、スイッチを 4 つだけ入れましょう。
-```
+
+### 目標: 宝石を 3 つだけ取って、スイッチを 4 つだけ入れましょう。
+
 回答コード例↓
 ``` swift
 var countGem = 0
@@ -334,9 +334,9 @@ while countGem < 3 || toggledSwitch < 4{
 ---
 
 ## 値が等しいかどうかを調べる
-```
-目標: スイッチと同じ数だけ宝石を集めましょう
-```
+
+### 目標: スイッチと同じ数だけ宝石を集めましょう
+
 回答コード例↓
 ``` swift
 let switchCounter = numberOfSwitches
@@ -389,9 +389,9 @@ while gemCounter < switchCounter {
 ---
 
 ## 決まった数だけスイッチを入れる
-```
-目標: 集めた宝石と同じ数のスイッチを入れましょう。
-```
+
+### 目標: 集めた宝石と同じ数のスイッチを入れましょう。
+
 回答コード例↓
 ``` swift
 var gemCounter = 0
@@ -456,9 +456,9 @@ func gehen() {
 ---
 
 ## 決まった数だけ集める
-```
-目標: ランダムに決められた数の宝石を集めましょう。宝石の数は totalGems(宝石の合計数) で表されます。
-```
+
+### 目標: ランダムに決められた数の宝石を集めましょう。宝石の数は totalGems(宝石の合計数) で表されます。
+
 回答コード例↓
 ``` swift
 let totalGems = randomNumberOfGems
