--- a/src/members/inugamine/swiftPlayground/code1/function.mdx
+++ b/src/members/inugamine/swiftPlayground/code1/function.mdx
@@ -4,9 +4,9 @@ title: 関数
 
 # 関数
 ##  新しい挙動を作る
-```
-目標: コンポジションを使って、右に曲がりましょう。
-```
+
+### 目標: コンポジションを使って、右に曲がりましょう。
+
 回答コード例↓
 ``` swift
 func move(steps: Int){
@@ -35,9 +35,9 @@ collectGem()
 ---
 
 ##  新しい関数を作る
-```
-目標: 右に曲がるための関数を定義して、使ってみましょう。
-```
+
+### 目標: 右に曲がるための関数を定義して、使ってみましょう。
+
 回答コード例↓
 ``` swift
 func turnRight() {
@@ -83,9 +83,9 @@ func turnRight() {
 ---
 
 ##  集めて、切り替えて、繰り返す
-```
-目標: 繰り返しのパターンをまとめた関数を定義しましょう。
-```
+
+### 目標: 繰り返しのパターンをまとめた関数を定義しましょう。
+
 回答コード例↓
 ``` swift
 func collectYtoggle {
@@ -128,9 +128,9 @@ func collectYtoggle {
 ---
 
 ##  往復する
-```
-目標: 繰り返しのパターンを見つけて、関数を定義しましょう。
-```
+
+### 目標: 繰り返しのパターンを見つけて、関数を定義しましょう。
+
 回答コード例↓
 ``` swift
 func getGems() {
@@ -160,9 +160,9 @@ getGems()
 ---
 
 ##  パターンをネストする
-```
-目標: 関数を他の関数から呼び出してみましょう
-```
+
+### 目標: 関数を他の関数から呼び出してみましょう
+
 回答コード例↓
 ``` swift
 func turnAround() {
@@ -230,9 +230,9 @@ for i in 1...4 {
 ---
 
 ##  並んだ階段
-```
-目標: ステージのクリア方法を複数の関数に分解しましょう。
-```
+
+### 目標: ステージのクリア方法を複数の関数に分解しましょう。
+
 回答コード例↓
 ``` swift
 func collectGemTurnAround() {
@@ -268,9 +268,9 @@ for i in 1...3 {
 ---
 
 ##  パターンを探す
-```
-目標: パターンを分解して、関数を作りましょう。
-```
+
+### 目標: パターンを分解して、関数を作りましょう。
+
 回答コード例↓
 ``` swift
 func moveThenToggle(){
