update totegamma page

--- a/src/members/totegamma/index.mdx
+++ b/src/members/totegamma/index.mdx
@@ -6,6 +6,13 @@ discord: 397081105225744385
 avatar: /assets/totegamma/avatar.png
 ---
 
+import Activity from '../../components/Activity.tsx';
+
+<Activity
+    client:load
+    id="totegamma"
+/>
+
 ## 各種リンク
 
 - ブログ: https://gammalab.net/
