fix: Update image captions for Furdabu member profile

--- a/src/members/furdabu/index.mdx
+++ b/src/members/furdabu/index.mdx
@@ -9,5 +9,5 @@ avatar: /assets/furdabu/avatar.webp
 ふーえるというキャラがおります。<br />
 ごく稀に人間界に現れます、ぜひ遊んであげて下さい！！！
 
-![アバター画像](/assets/furdabu/fooele-photo.webp)
-![アバター画像](/assets/furdabu/3-map-image.webp)
+![キャラ画像](/assets/furdabu/fooele-photo.webp)
+![キャラ３面図](/assets/furdabu/3-map-image.webp)
