--- a/src/members/naborisk/index.mdx
+++ b/src/members/naborisk/index.mdx
@@ -6,4 +6,11 @@ discord: 177458471921254400
 avatar: /assets/naborisk/avatar.png
 ---
 
+import Activity from '../../components/Activity.tsx';
+
+<Activity
+    client:load
+    id="naborisk"
+/>
+
 こんにちは
