--- a/src/members/inugamine/index.mdx
+++ b/src/members/inugamine/index.mdx
@@ -6,6 +6,14 @@ discord: 258883784991178753
 avatar: /assets/inugamine/ingmne.JPG
 ---
 
+import Activity from '../../components/Activity.tsx';
+
+<Activity
+    client:load
+    id="inugamine"
+/>
+
+
 戌咬音かんぬきといいます。
 
 作りたいアプリがあって、アプリ制作のために本格的にプログラミングに手を出しました。  
