ファイル名の変更とカレンダーのリンクを追加

--- a/src/members/inugamine/AdventCalendar20251215.mdx
+++ b/src/members/inugamine/AdventCalendar20251215.mdx
@@ -1,6 +1,6 @@
 # Colemak使いたい→PRマージまでの一日
 
-皆さんこんにちは。「Anthrotech Advent Calendar 2025(表記揺れアリ)」、15日担当の inugaminé です。
+皆さんこんにちは。「[Anthrotech Advent Calendar 2025](https://adventar.org/calendars/11972)」、15日担当の inugaminé です。
 
 今回は、人生初のアドベントカレンダーで、 OSS プロジェクトである「azooKey」に人生初の本格的なプルリクエストを投げ、  人生初のプルリクエストのマージを経験したお話を書かせていただこうと思います。
 
