タイトルの変更

--- a/src/members/inugamine/AdventCalendar20251215.mdx
+++ b/src/members/inugamine/AdventCalendar20251215.mdx
@@ -1,4 +1,4 @@
-# Colemak 使いたい → PR マージまでの一日
+# azooKey で Colemak 使いたい → PR マージまでの一日
 
 皆さんこんにちは。「[Anthrotech Advent Calendar 2025](https://adventar.org/calendars/11972)」、15 日担当の inugaminé です。
 
