リンクを追加、見た目を改善。

--- a/src/members/tatsu020/index.mdx
+++ b/src/members/tatsu020/index.mdx
@@ -29,21 +29,197 @@ avatar: /assets/tatsu020/avatar.png
 
 ## 今まで触ったことのある技術
 
-- Kotlin (Android)
-- Java (Spring Boot)
-- Unity
-- Electron
-- Windows App SDK
+<ul className="tech-stack">
+    <li>
+        <img src="https://cdn.simpleicons.org/kotlin" alt="Kotlin" className="tech-icon" />
+        Kotlin (Android)
+    </li>
+    <li>
+        <img src="https://cdn.simpleicons.org/springboot" alt="Spring Boot" className="tech-icon" />
+        Java (Spring Boot)
+    </li>
+    <li>
+        <img src="https://cdn.simpleicons.org/unity/000000" alt="Unity" className="tech-icon" />
+        Unity
+    </li>
+    <li>
+        <img src="https://cdn.simpleicons.org/electron" alt="Electron" className="tech-icon" />
+        Electron
+    </li>
+    <li>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64" className="tech-icon"><path d="M20 52.6c.6.3 1.1.8 1.5 1.4.4.6.6 1.3.5 2 0 .5-.1 1.1-.3 1.6-.4 1-1.2 1.7-2.1 2.1-1 .4-2.1.4-3.1 0s-1.7-1.2-2.1-2.1c-.2-.5-.3-1-.3-1.6 0-.7.2-1.4.6-2 .4-.6.9-1 1.4-1.4V50c-2.1 0-4.3-.4-6.2-1.3-3.9-1.6-7-4.7-8.6-8.5-1.7-4-1.7-8.5 0-12.4C2.9 24 6 20.9 9.8 19.3c2.9-1.2 6.1-1.6 9.1-1 .8-1.3 1.8-2.4 2.9-3.4 1.1-1 2.3-1.9 3.6-2.6 1.3-.7 2.7-1.3 4.1-1.7 2.4-.6 4.8-.7 7.2-.4.8.1 1.6.3 2.4.6.8.3 1.6.6 2.3.9l2.5 1.2V30H20v22.6zM16 30c0-.5.1-1.1.3-1.6.4-1 1.2-1.7 2.1-2.1.5-.2 1-.3 1.6-.3h20V15.4c-3.2-1.5-6.8-1.8-10.2-.7-4.1 1.3-7.3 4.4-8.8 8.4-3-1.4-6.5-1.5-9.6-.2-2.9 1.2-5.2 3.5-6.4 6.4-1.3 3-1.3 6.3 0 9.3 1.2 2.9 3.5 5.2 6.4 6.4 1.5.6 3.1.9 4.7.9V30zm36-4c1.6 0 3.2.3 4.7.9 1.4.6 2.7 1.5 3.8 2.6 1.1 1.1 1.9 2.4 2.5 3.8 1.3 3 1.3 6.3 0 9.3-.6 1.4-1.5 2.7-2.6 3.8-1.1 1.1-2.4 2-3.8 2.6-1.5.6-3 .9-4.6.9H24V34h24V7.4c-.6-.4-1.1-.8-1.5-1.4-.3-.6-.5-1.3-.5-2 0-.5.1-1.1.3-1.6.4-1 1.2-1.7 2.1-2.1 1-.4 2.1-.4 3.1 0s1.7 1.2 2.1 2.1c.3.5.4 1.1.4 1.6 0 .7-.2 1.4-.5 2-.4.6-.9 1-1.5 1.4V26zm0 20c1.1 0 2.1-.2 3.1-.6 1.9-.8 3.5-2.3 4.3-4.3.8-2 .8-4.2 0-6.2-.8-1.9-2.3-3.5-4.3-4.3-1-.4-2-.6-3.1-.6v4c0 .5-.1 1.1-.3 1.6-.4 1-1.2 1.7-2.1 2.1-.5.2-1 .3-1.6.3H28v8h24z" fill="#0078d7"/></svg>
+        Windows App SDK
+    </li>
+</ul>
 
 ## 作ったもの
 
-- [AIイラストタスク管理アプリ](https://github.com/tatsu020/Visual-TODO)
-- vrchat用自動ステータス更新アプリ（製作中）
+<ul className="project-grid">
+    <li>
+        <a href="https://github.com/tatsu020/Visual-TODO" className="project-card" target="_blank">
+            <h3>Visual-TODO</h3>
+            <p>AIイラストタスク管理アプリ</p>
+        </a>
+    </li>
+    <li>
+        <a href="https://tatsu020.booth.pm/items/7736173" className="project-card" target="_blank">
+            <h3>VRC Status Updater</h3>
+            <p>vrchat用自動ステータス更新アプリ</p>
+        </a>
+    </li>
+</ul>
 
 ## リンク
 
-- X: https://x.com/020_tatsu
-- Concrnt: https://concrnt.world/con1r7vmxlpj3cnqs8jtxggcdgj48ys58thpymat97
+<ul className="link-grid">
+    <li>
+        <a href="https://x.com/020_tatsu" className="link-card" target="_blank">
+            <div className="link-icon x-icon">
+                <svg viewBox="0 0 24 24"><path d="M18.901 1.153h3.68l-8.04 9.19L24 22.846h-7.406l-5.8-7.584-6.638 7.584H.474l8.6-9.83L0 1.154h7.594l5.243 6.932ZM17.61 20.644h2.039L6.486 3.24H4.298Z"/></svg>
+            </div>
+            <span>@020_tatsu</span>
+        </a>
+    </li>
+    <li>
+        <a href="https://concrnt.world/con1r7vmxlpj3cnqs8jtxggcdgj48ys58thpymat97" className="link-card" target="_blank">
+            <div className="link-icon concurrent-icon">
+                <img src="https://square.concurrent.world/assets/Concrnt-Logo-Circle.svg" alt="Concurrent" />
+            </div>
+            <span>Concurrent</span>
+        </a>
+    </li>
+    <li>
+        <a href="https://note.com/tatsu020" className="link-card" target="_blank">
+            <div className="link-icon note-icon">
+                <svg viewBox="0 0 98 22">
+                    <path d="M60.3377 0.0205078H65.3607V5.41256H70.5272V10.128H65.3607V15.7251H60.3377V10.128H55.1711V5.41256H60.3377V0.0205078Z"/>
+                    <path d="M27.8419 11.5017C27.8419 6.15065 32.1678 1.8042 37.4778 1.8042C42.7879 1.8042 47.1138 6.15065 47.1138 11.5017C47.1138 16.8527 42.7879 21.1992 37.4778 21.1992C32.1678 21.1992 27.8419 16.8527 27.8419 11.5017ZM32.4343 11.4812C32.4343 14.29 34.6896 16.5657 37.4778 16.5657C40.2661 16.5657 42.5214 14.3105 42.5214 11.4812C42.5214 8.67241 40.2661 6.39667 37.4778 6.39667C34.6896 6.39667 32.4343 8.67241 32.4343 11.4812Z"/>
+                    <path d="M4.87829 1.90517C7.57364 1.85514 10.3765 1.80312 12.6293 1.86569C17.5908 1.98871 19.4565 4.14143 19.5385 9.49247C19.6 12.5063 19.5385 21.1582 19.5385 21.1582H14.167C14.167 17.9452 14.1743 15.8712 14.1797 14.3661C14.187 12.3278 14.1905 11.332 14.167 9.96402C14.1054 7.87281 13.5109 6.8682 11.8912 6.68368C10.169 6.47866 5.39206 6.64268 5.39206 6.64268V21.1582H0.0205078V1.9682C1.48206 1.9682 3.15828 1.93709 4.87829 1.90517Z"/>
+                    <path d="M97.877 11.5017C97.877 6.15065 93.5511 1.8042 88.241 1.8042C82.931 1.8042 78.605 6.15065 78.605 11.5017C78.605 14.6385 80.0402 17.3243 82.2749 19.108C83.8331 20.3381 86.0063 21.1992 88.9176 21.1992C90.3322 21.1992 94.0021 20.8096 96.6469 17.8778L94.4736 14.9665C93.5511 15.7866 91.2343 16.9347 89.3891 16.9347C87.0519 16.9347 85.6373 16.4837 84.6122 15.5201C83.9766 14.946 83.5255 14.0645 83.3205 12.9778H97.7335C97.8155 12.4858 97.877 12.0142 97.877 11.5017ZM83.3615 9.73851C83.8946 7.46278 85.4937 5.78161 88.2205 5.78161C91.0703 5.78161 92.567 7.58579 93.059 9.73851H83.3615Z"/>
+                </svg>
+            </div>
+            <span>Note</span>
+        </a>
+    </li>
+    <li>
+        <a href="https://tatsu020.booth.pm/" className="link-card" target="_blank">
+            <div className="link-icon booth-icon">
+                <img src="https://asset.booth.pm/assets/booth_logo-cd38e1da31e93676b081bd8f0aca2805f758f514c8e95dc3f1a8aac5e58dffec.svg" alt="BOOTH" />
+            </div>
+            <span>Booth</span>
+        </a>
+    </li>
+</ul>
+
+<style>{`
+    /* Link Grid System */
+    .link-grid {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(130px, 1fr));
+        gap: 1.2rem;
+        list-style: none !important;
+        padding: 0 !important;
+        margin-top: 1rem;
+    }
+
+    .link-grid li {
+        display: flex;
+    }
+
+    .link-card {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        padding: 1.2rem;
+        background: white;
+        border: 3px solid var(--accent-black) !important;
+        border-radius: 16px;
+        text-decoration: none !important;
+        box-shadow: 4px 4px 0 rgba(0,0,0,0.8);
+        transition: all 0.3s cubic-bezier(0.34, 1.56, 0.64, 1);
+        color: var(--accent-black) !important;
+        position: relative;
+        overflow: hidden;
+    }
+    
+    /* Shine effect */
+    .link-card::before {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: -100%;
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(90deg, transparent, rgba(255,255,255,0.6), transparent);
+        transition: left 0.5s ease;
+    }
+    
+    .link-card:hover::before {
+        left: 100%;
+    }
+
+    /* Override the article a background gradient */
+    article .link-card {
+        background: white !important;
+    }
+
+    .link-card:hover {
+        transform: translateY(-8px) rotate(2deg);
+        box-shadow: 6px 10px 0 rgba(0,0,0,0.8);
+        background: var(--bone-white) !important;
+    }
+
+    .link-icon {
+        width: 48px;
+        height: 48px;
+        margin-bottom: 0.5rem;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-shrink: 0;
+        transition: transform 0.3s cubic-bezier(0.34, 1.56, 0.64, 1);
+    }
+    
+    .link-card:hover .link-icon {
+        transform: scale(1.15) rotate(-5deg);
+    }
+    
+    .link-icon svg {
+        width: 100%;
+        height: 100%;
+        fill: currentColor;
+    }
+    
+    /* Icon Colors */
+    .x-icon { color: #000; }
+    .note-icon { color: #41C9B4; }
+    .concurrent-icon { color: #2E8BB1; } 
+    .booth-icon { color: #FC4D50; }
+    
+    .link-card span {
+        font-weight: 700;
+        font-size: 0.95rem;
+    }
+
+    /* Tech stack icons */
+    .tech-icon {
+        width: 16px;
+        height: 16px;
+        margin-right: 0.4rem;
+        flex-shrink: 0;
+    }
+
+    /* Link icon images */
+    .link-icon img {
+        max-width: 48px;
+        max-height: 48px;
+        width: auto;
+        height: auto;
+        object-fit: contain;
+    }
+`}</style>
 
 <style is:global>{`
     :root {
@@ -61,6 +237,7 @@ avatar: /assets/tatsu020/avatar.png
             radial-gradient(circle at 90% 80%, rgba(0,0,0,0.1) 10%, transparent 10.5%) !important;
         background-size: 100% 100% !important;
         background-attachment: fixed !important;
+        scroll-behavior: smooth;
     }
 
     body {
@@ -68,45 +245,66 @@ avatar: /assets/tatsu020/avatar.png
         color: var(--accent-black) !important;
     }
 
+    /* Content Layout */
     #main article {
         background: white;
         border: 3px solid var(--accent-black);
         border-radius: 20px;
-        box-shadow: 6px 6px 0 rgba(0,0,0,0.8);
-        padding: 2rem;
-        transition: all 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+        box-shadow: 8px 8px 0 rgba(0,0,0,0.8);
+        padding: 2.5rem;
+        transition: transform 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+        animation: fadeInUp 0.8s ease-out;
     }
 
     #main article:hover {
-        transform: translateY(-4px);
-        box-shadow: 10px 10px 0 rgba(0,0,0,0.8);
+        transform: translateY(-2px);
     }
 
+    /* Typos */
     h1, h2, h3 {
         font-family: 'M PLUS Rounded 1c', sans-serif !important;
         font-weight: 900 !important;
-        letter-spacing: 2px;
+        letter-spacing: 0.05em;
         color: var(--accent-black);
+        position: relative;
+        display: inline-block;
+    }
+
+    h2 {
+        margin-top: 2rem;
+        margin-bottom: 1.5rem;
+        font-size: 1.8rem;
+        border-bottom: 4px solid var(--main-red);
+        padding-bottom: 0.2rem;
     }
     
     .member-header h1 {
         color: white !important;
-        text-shadow: 3px 3px 0px var(--accent-black) !important;
+        text-shadow: 4px 4px 0px var(--accent-black) !important;
+        font-size: 2.5rem !important;
     }
 
+    p {
+        line-height: 1.8;
+        font-size: 1.05rem;
+    }
+
+    /* Links turned into Buttons explicitly or styled generally */
     article a {
         color: var(--main-red) !important;
         font-weight: bold;
         text-decoration: none !important;
-        border-bottom: 2px solid var(--main-red);
+        background: linear-gradient(to bottom, transparent 70%, rgba(239, 68, 68, 0.2) 70%);
         transition: all 0.2s;
+        border-bottom: none;
     }
 
     article a:hover {
-        background: var(--main-red);
-        color: white !important;
+        background: linear-gradient(to bottom, transparent 0%, rgba(239, 68, 68, 0.2) 0%);
+        color: var(--dark-red) !important;
     }
 
+    /* Background Animation */
     .bg-paw-container {
         position: fixed;
         top: 0;
@@ -120,30 +318,208 @@ avatar: /assets/tatsu020/avatar.png
     
     .bg-paw {
         position: absolute;
-        opacity: 0.07;
+        opacity: 0;
         fill: black;
+        animation: paw-stamp 0.8s ease-out forwards;
     }
     
-    .bg-paw:nth-child(1) { top: 5%; left: 5%; width: 150px; transform: rotate(-20deg); }
-    .bg-paw:nth-child(2) { bottom: 10%; right: 5%; width: 200px; transform: rotate(15deg); }
-    .bg-paw:nth-child(3) { top: 40%; right: 15%; width: 100px; transform: rotate(45deg); }
-    .bg-paw:nth-child(4) { bottom: 30%; left: 10%; width: 120px; transform: rotate(-10deg); }
+    .bg-paw:nth-child(1) { 
+        top: 10%; left: 10%; width: 140px; 
+        --rotation: -25deg;
+        animation-delay: 0.2s; 
+    }
+    .bg-paw:nth-child(2) { 
+        bottom: 15%; right: 8%; width: 180px; 
+        --rotation: 15deg;
+        animation-delay: 0.8s; 
+    }
+    .bg-paw:nth-child(3) { 
+        top: 45%; right: 15%; width: 110px; 
+        --rotation: 45deg;
+        animation-delay: 1.4s; 
+    }
+    .bg-paw:nth-child(4) { 
+        bottom: 25%; left: 15%; width: 130px; 
+        --rotation: -10deg;
+        animation-delay: 2.0s; 
+    }
+
+    @keyframes paw-stamp {
+        0% { opacity: 0; transform: rotate(var(--rotation)) scale(0.5); }
+        60% { opacity: 0.12; transform: rotate(var(--rotation)) scale(1.1); }
+        100% { opacity: 0.08; transform: rotate(var(--rotation)) scale(1); }
+    }
+
+    /* Hover in animation - paws appear inside article */
+    #main article:hover .bg-paw {
+        animation: paw-stamp-in 0.5s ease-out forwards;
+        animation-delay: 0s !important;
+    }
+    
+    #main article:hover .bg-paw:nth-child(1) { animation-delay: 0s !important; }
+    #main article:hover .bg-paw:nth-child(2) { animation-delay: 0.1s !important; }
+    #main article:hover .bg-paw:nth-child(3) { animation-delay: 0.2s !important; }
+    #main article:hover .bg-paw:nth-child(4) { animation-delay: 0.3s !important; }
+
+    @keyframes paw-stamp-in {
+        0% { opacity: 0; transform: rotate(var(--rotation)) scale(0.3); }
+        50% { opacity: 0.15; transform: rotate(var(--rotation)) scale(1.15); }
+        100% { opacity: 0.08; transform: rotate(var(--rotation)) scale(1); }
+    }
+
+    /* Prevent animation re-trigger when hover ends */
+    #main article:not(:hover) .bg-paw {
+        animation: none !important;
+        opacity: 0.08;
+        transform: rotate(var(--rotation)) scale(1);
+    }
+
+    @keyframes fadeInUp {
+        from { opacity: 0; transform: translateY(30px); }
+        to { opacity: 1; transform: translateY(0); }
+    }
+
+    /* Tech Tags */
+    .tech-stack {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 0.8rem;
+        list-style: none !important;
+        padding: 0 !important;
+    }
+
+    .tech-stack li {
+        background: white;
+        border: 2px solid var(--accent-black);
+        padding: 0.2rem 0.8rem;
+        border-radius: 999px;
+        line-height: 1;
+        font-weight: 700;
+        box-shadow: 3px 3px 0 rgba(0,0,0,0.15);
+        transition: all 0.3s cubic-bezier(0.34, 1.56, 0.64, 1);
+        font-size: 0.85rem;
+        color: var(--accent-black);
+        display: flex;
+        align-items: center;
+        position: relative;
+        overflow: hidden;
+    }
+    
+    .tech-stack li::before {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: -100%;
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(90deg, transparent, rgba(255,255,255,0.5), transparent);
+        transition: left 0.4s ease;
+    }
+    
+    .tech-stack li:hover::before {
+        left: 100%;
+    }
+
+    .tech-stack li:hover {
+        transform: translateY(-4px) scale(1.05) rotate(-1deg);
+        box-shadow: 5px 6px 0 rgba(0,0,0,0.25);
+        background: var(--bone-white);
+    }
+
+    /* Project Cards */
+    .project-grid {
+        display: grid; 
+        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+        gap: 1.5rem;
+        list-style: none !important;
+        padding: 0 !important;
+    }
+
+    .project-grid li {
+        display: flex;
+    }
+
+    .project-card {
+        width: 100%;
+        border: 3px solid var(--accent-black) !important;
+        border-radius: 16px;
+        padding: 1.5rem;
+        background: white;
+        text-decoration: none !important;
+        color: var(--accent-black) !important;
+        display: flex;
+        flex-direction: column;
+        transition: all 0.3s cubic-bezier(0.34, 1.56, 0.64, 1);
+        box-shadow: 4px 4px 0 rgba(0,0,0,0.8);
+        position: relative;
+        overflow: hidden;
+    }
+    
+    .project-card::before {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: -150%;
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(90deg, transparent, rgba(255,255,255,0.4), transparent);
+        transform: skewX(-25deg);
+        transition: left 0.6s ease;
+    }
+    
+    .project-card:hover::before {
+        left: 150%;
+    }
+
+    .project-card:hover {
+        transform: translateY(-8px) rotate(-1deg);
+        box-shadow: 10px 12px 0 rgba(0,0,0,0.8);
+    }
+
+    .project-card h3 {
+        margin: 0 0 0.5rem 0;
+        font-size: 1.25rem;
+        color: var(--main-red);
+    }
+
+    .project-card p {
+        margin: 0;
+        font-size: 0.9rem;
+        color: #666;
+        line-height: 1.5;
+    }
+
+    /* Link list styling */
+    .link-list {
+        list-style: none !important;
+        padding: 0 !important;
+        display: flex;
+        flex-direction: column; 
+        gap: 0.5rem;
+    }
+    
+    .link-list li {
+        display: flex;
+        align-items: center;
+        gap: 0.5rem;
+    }
 
     .member-header .avatar {
-        border: 3px solid var(--accent-black);
-        box-shadow: 4px 4px 0 rgba(0,0,0,0.2);
+        border: 4px solid var(--accent-black);
+        box-shadow: 6px 6px 0 rgba(0,0,0,0.2);
+        transition: all 0.4s cubic-bezier(0.34, 1.56, 0.64, 1);
+    }
+    
+    .member-header .avatar:hover {
+        transform: rotate(8deg) scale(1.1);
+        box-shadow: 10px 10px 0 rgba(0,0,0,0.3);
     }
 
     #sidebar {
-        background: rgba(255,255,255,0.9);
-        padding: 15px;
-        border-radius: 15px;
+        background: rgba(255,255,255,0.95);
+        padding: 20px;
+        border-radius: 20px;
         border: 3px solid var(--accent-black);
-        box-shadow: 4px 4px 0 rgba(0,0,0,0.2);
-    }
-    
-    #sidebar a {
-        color: var(--accent-black) !important;
-        font-weight: bold;
+        box-shadow: 6px 6px 0 rgba(0,0,0,0.2);
     }
 `}</style>
